--- a/style/header.css
+++ b/style/header.css
@@ -1,1 +1,1 @@
-header{padding:2em 0;background-color:#2d5be3;color:#fff}header .logo{font-size:2em;text-transform:uppercase;background-image:url('../images/header/logo.png');background-repeat:no-repeat;background-position:left center;padding-left:155px}header .logo img{padding-top:2px}
+header{padding:2em;background-color:#2d5be3;color:#fff}header .logo{font-size:2em;text-transform:uppercase;background-image:url('../images/header/logo.png');background-repeat:no-repeat;background-position:left center;padding-left:155px}header .logo img{padding-top:2px}
