--- a/style/core.css
+++ b/style/core.css
@@ -1,1 +1,1 @@
-body{margin:0;font-family:sans-serif;font-size:10px}.container{max-width:768px;margin:0 auto}.hide{display:none}
+body{margin:0;font-family:sans-serif;font-size:10px}.container{max-width:768px;margin:0 auto}.hide{display:none}input[type=text]{border:0;outline:0;border-radius:2px;padding:6px}button{border:0;outline:0;border-radius:2px;padding:6px}
