--- a/style/variables.less
+++ b/style/variables.less
@@ -1,2 +1,7 @@
 @color-header-bg: #2d5be3;
 @color-header: #fff;
+
+@color-search-bg: @color-header-bg + 75%;
+
+@color-search-button-bg:@color-header-bg;
+@color-search-button:@color-header;
