--- a/style/variables.less
+++ b/style/variables.less
@@ -5,3 +5,7 @@
 
 @color-search-button-bg:@color-header-bg;
 @color-search-button:@color-header;
+
+@color-error-bg:#f2dede;
+@color-error:#a94442;
+@color-error-border:#ebccd1;
