Display image for venue

--- a/style/core.less
+++ b/style/core.less
@@ -20,7 +20,7 @@ body{
   background-color:@color-error-bg;
   border:solid 1px @color-error-border;
   padding: 1em 1em;
-  margin: 2em;
+  margin: 2em auto;
   font-size: 1.4em;
   border-radius: 5px;
 }
