--- a/style/results.less
+++ b/style/results.less
@@ -16,7 +16,14 @@
       padding:2em;
       border-top:1px solid #eee;
 
+      img{
+        display: inline-block;
+        width:74px;
+        height:74px;
+      }
+
       h3{
+        display: inline-block;
         margin:0;
         font-size:1.4em;
       }
