--- a/style/results.css
+++ b/style/results.css
@@ -1,1 +1,1 @@
-.results h2{padding:2em;margin:0;color:#444;font-size:1.2em}.results ul{margin:0;padding:0}.results ul li{list-style-type:none;padding:2em;border-top:1px solid #eee}.results ul li h3{margin:0;font-size:1.4em}
+.results h2{padding:2em;margin:0;color:#444;font-size:1.2em}.results ul{margin:0;padding:0}.results ul li{list-style-type:none;padding:2em;border-top:1px solid #eee}.results ul li img{display:inline-block;width:74px;height:74px}.results ul li h3{display:inline-block;margin:0;font-size:1.4em}
